# my-caelestia

./: .gitignore  README.md  install.fish
.github/workflows/: build.yml
cli/: PKGBUILD  README.md  default.nix  pyproject.toml
cli/completions/: caelestia.fish
cli/src/caelestia/: parser.py
cli/src/caelestia/subcommands/: record.py  resizer.py  screenshot.py  toggle.py
cli/src/caelestia/utils/: hypr.py  paths.py  theme.py  wallpaper.py
dots/: PKGBUILD  README.md  install.fish
dots/caelestia/: hypr-user.lua  shell.json
dots/fish/: config.fish
dots/fish/functions/: cld.fish
dots/hypr/: hyprland.lua
dots/hypr/hyprland/: env.lua  execs.lua  general.lua  keybinds.lua  rules.lua  variables.lua
dots/hypr/scheme/: default.lua  loader.lua
dots/hypr/scripts/: caelestia-hypr-py-patched.py  volstep.fish
shell/: PKGBUILD  README.md  shell.qml
shell/services/: Hypr.qml
