[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caelestia"
version = "1.0.8"
requires-python = ">=3.13"
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.scripts]
caelestia = "caelestia:main"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "completions",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/caelestia"]

[tool.ruff]
line-length = 120
